# cringe-pics-telebot

./: .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  docker-compose.yaml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/actions/: dev-uv.yml  setup-python.yml
.github/actions/install-project/: action.yml
.github/actions/setup-environment/: action.yml
.github/workflows/: ci.yml  deploy.yml
docker/redis/: Dockerfile  entrypoint.sh
src/: main.py
src/cringe_pics_telebot/: cli.py  main.py
src/cringe_pics_telebot/backend/misc/: __init__.py  images.py
src/cringe_pics_telebot/backend/scheduler/: scheduler.py
src/cringe_pics_telebot/bot/: __init__.py  bot.py  dispatcher.py  emojis.py  helpers.py  images.py  keyboards.py  polling.py  subscription_callback_data.py  utils.py
src/cringe_pics_telebot/db/: __init__.py  db.py
src/cringe_pics_telebot/entities/: __init__.py  subscriptions.py
src/cringe_pics_telebot/helpers/: aiohttp_logger_middleware.py  serializers.py
src/cringe_pics_telebot/orm/: __init__.py  orm.py
src/cringe_pics_telebot/repositories/: __init__.py  yandex.py
src/cringe_pics_telebot/repositories/api_client/: __init__.py  api_client.py
src/cringe_pics_telebot/repositories/redis/: repo.py  (+2 more)
src/cringe_pics_telebot/services/: polling.py  random_image.py  subscriptions.py
src/cringe_pics_telebot/utilities/: __init__.py  setup_logger.py
src/entities/: __init__.py  image.py
src/orm/: orm.py
src/repositories/: api_client.py
src/repositories/yandex_disk/: __init__.py  api_client.py
tests/: conftest.py  pytest.ini
tests/db/: test_db.py
tests/functional/: compose.functional-tests.yml  conftest.py
tests/orm/: conftest.py  test_orm.py
tests/units/: test_redis_key_stability.py
(+27 files in other folders)
