[project]
name = "cringe-pics-telebot"
version = "0.1.0"
description = "Some bot that sends cringe pictures."
authors = [{ name = "Danil Astakhov", email = "thrixstudio@yandex.ru>" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "aiogram>=3.25.0",
  "aiohttp>=3.13.0",
  "asyncpg>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.44",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.14.1",
]
