[project]
name = "cringe-pics-telebot"
version = "0.1.0"
description = "Some bot that sends cringe pictures."
authors = [{ name = "Danil Astakhov", email = "thrixstudio@yandex.ru" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "aiogram>=3.25.0",
  "aiohttp>=3.13.0",
  "asyncpg>=0.31.0",
  "click>=8.3.2",
  "redis[hiredis]>=7.4.0",
  "serpyco-rs>=1.20.0",
  "sqlalchemy[asyncio]>=2.0.44",
]

[project.scripts]
bot = "cringe_pics_telebot.cli:poll"

[build-system]
requires = ["uv_build<0.12"]
build-backend = "uv_build"

[tool.hatch.build.targets.wheel]
packages = ["src/cringe_pics_telebot"]

[dependency-groups]
dev = [
  "mypy>=1.18.2",
  "pre-commit>=4.6.0",
  "pyhamcrest>=2.1.0",
  "pytest>=8.4.2",
  "pytest-asyncio>=1.2.0",
  "ruff>=0.14.1",
]
